Revision history for FCGI-Buffer

0.15
	IO::Compress:Brotli hasn't been ported to Windows

0.14	Mon 10 Jun 14:18:31 EDT 2019
	Untaint the language part of the save_to directory

0.13	Sat Feb 23 20:17:41 EST 2019
	Fix copy and paste error

0.12	Sat Feb 23 13:24:56 EST 2019
	Get the return status from the CGI::Info object
	Optimise lists a bit more
	Optmise <center>
	Added t/links.t and t/no404s.t

0.11	Wed Oct  4 08:52:44 EDT 2017
	Work with the latest IO::Compress::Brotli
	Allow save_to to be disabled after it was enabled

0.10	Sun Aug 27 13:28:11 EDT 2017
	Remove false positive bug reports

0.09	Sat 21 Jan 09:42:42 EST 2017
	Replace dynamic links to static links on subsequent calls
	In /cgi-bin/foo.fcgi?arg1=a replace references to
		/cgi-bin/foo.fcgi?arg2=b to ?arg2=b
	Honour the order of HTTP_ACCEPT_ENCODING
	Improved handling of HTTP status
	init() returns the object itself so you can now chain messages
	Put different languages in different caches
	On HTTP sites, replace href=http://www.example.com with href=www.example.com

0.08	Tue Oct  4 10:06:22 EDT 2016
	Print stack trace when calling init too late
	Support Brotli

0.07	Sat Dec  5 15:03:56 EST 2015
	Fix RT110011
	If you give a cache to init() then later give cache => undef,
		the server side cache is no longer used.

0.06	Mon Oct 12 18:41:13 EDT 2015
	Fix on older perls

0.05	Sun Aug 16 20:19:13 EDT 2015
	generate_key - honour the vary header
	Fix problem were server side cached contents weren't compressed when
		loading the content from the cache

0.04	Fri May 22 12:19:38 EDT 2015
	Added t/nocache.t
	Fix t/cache.t when CHI is not installed

0.03	Sun May 17 08:43:42 EDT 2015
	Added X-Cache and X-Cache-Lookup headers
	Fixed overly agressive optimisation
	Don't use the cache if the client sends max-age=0
	Added cache_age option to init()
	Removed Test::TempDir RT102225
	Added t/cache.t
	Fix '(in cleanup) Can't call method "READ" on an undefined value'
		Perl >= 5.14.0 only