@@ -14,6 +14,7 @@ t/10-new.t
 t/apoc.t
 t/boiler.t
 t/cache.t
+t/carp.t
 t/changes.t
 t/coverage.t
 t/critic.t
