@@ -2,6 +2,7 @@ Revision history for FCGI-Buffer
 
 0.15
 	IO::Compress:Brotli hasn't been ported to Windows
+	Added sanity checking to the save_to->directory parameter
 
 0.14	Mon 10 Jun 14:18:31 EDT 2019
 	Untaint the language part of the save_to directory
